--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+CacheControl==0.12.5
 cachetools==2.1.0
 certifi==2018.10.15
 chardet==3.0.4
+firebase-admin==2.13.0
 google-api-core==1.5.0
 google-auth==1.5.1
 google-cloud-core==0.28.1
 google-cloud-firestore==0.30.0
+google-cloud-storage==1.13.0
+google-resumable-media==0.3.1
 googleapis-common-protos==1.5.3
 grpcio==1.15.0
 idna==2.7
+msgpack==0.5.6
 protobuf==3.6.1
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
